--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -153,14 +153,96 @@ body {
 }
 
 /* ----- Image principale ----- */
-.Ws-Section img {
+
+.Ws-Btn-Submit {
+  background-color: #3b82f6; /* bleu accent */
+  color: #f5f5f5; /* texte blanc cassé */
+  border: none;
+  border-radius: 15px;
+  padding: 12px 25px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease,
+    box-shadow 0.3s ease;
+  box-shadow: 0 4px 10px rgba(59, 130, 246, 0.4);
+  margin-top: 0.1%;
+  display: inline-block;
+  align-self: flex-start;
+}
+
+/* Hover */
+.Ws-Btn-Submit:hover {
+  background-color: #8b5cf6; /* violet accent */
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(139, 92, 246, 0.5);
+}
+
+/* Active / clic */
+.Ws-Btn-Submit:active {
+  transform: translateY(0);
+  box-shadow: 0 3px 6px rgba(59, 130, 246, 0.4);
+}
+
+.Ws-img {
+  width: 100%;
+  max-width: 1200px;
+  height: 350px;
+}
+.Ws-img img {
   width: 100%;
   height: 350px;
   object-fit: cover;
   border-radius: 16px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 }
-
+.spanTextJob {
+  position: relative;
+  display: flex;
+  top: -300px;
+  right: -20%;
+  color: darkslategrey;
+  font-size: 30pt;
+  font-family: fantasy;
+}
+.spanAnnonce {
+  position: relative;
+  display: flex;
+  top: -230px;
+  right: -80%;
+  font-size: 30pt;
+  font-family: fantasy;
+  color: darkslategrey;
+}
+.spanNbAnnonce {
+  position: relative;
+  display: flex;
+  top: -260px;
+  right: -74.5%;
+  color: darkslategrey;
+  font-size: 30pt;
+  font-family: fantasy;
+  animation: floatShadow 1s infinite alternate;
+  transition: all 0.1s ease-in-out;
+}
+@keyframes floatShadow {
+  0% {
+    transform: translateY(0px);
+    text-shadow: 0 0 5px #22d3ee;
+  }
+  30% {
+    transform: translateY(0px);
+    text-shadow: 0 0 15px #22d3ee;
+  }
+  50% {
+    transform: translateY(-5px);
+    text-shadow: 0 0 20px #22d3ee;
+  }
+  100% {
+    transform: translateY(0px);
+    text-shadow: 0 0 15px #22d3ee;
+  }
+}
 /* ----- Barre de recherche ----- */
 .Ws-SearchBar * {
   box-sizing: border-box;
@@ -184,7 +266,6 @@ body {
   position: relative;
   display: flex;
   width: 100%;
-  height: 100%;
   gap: 15px;
   align-items: center;
   justify-content: center;
