--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -8,6 +8,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  min-height: 100vh;
 }
 
 /* ----- Header principal ----- */
