--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -2,6 +2,14 @@
   padding: 0;
   margin: 0;
 }
+html {
+  overflow: auto;
+  min-height: 100vh;
+}
+#root {
+  position: relative;
+  height: 100%;
+}
 body {
   background: linear-gradient(50deg, #1a2b4c, #ffffff, #5cafe3);
   font-family: "Lora", serif;
@@ -9,6 +17,17 @@ body {
   font-weight: 400;
   font-style: normal;
   min-height: 100vh;
+  overflow: hidden;
+}
+
+.App-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* toute la hauteur de l’écran */
+}
+
+.Ws-main {
+  flex: 1; /* prend tout l’espace disponible entre header et footer */
 }
 
 /* ----- Header principal ----- */
@@ -396,6 +415,12 @@ select option {
   }
 }
 
+.Ws-aboutUs {
+  position: relative;
+  display: flex;
+  height: 310px;
+  width: 100%;
+}
 /* Focus du select */
 .contactContainerElement select:focus {
   border-color: #3b82f6;
@@ -1155,36 +1180,6 @@ select option {
   }
 }
 
-/* ----- Footer principal ----- */
-.Ws-footer {
-  background-color: rgba(13, 13, 13, 0.9);
-  color: #f5f5f5;
-  padding: 20px 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: 1px solid #a1a1aa;
-}
-
-/* ----- Liste du footer ----- */
-.Ws-UlFooter {
-  list-style: none;
-  display: flex;
-  gap: 30px;
-  margin: 0;
-  padding: 0;
-}
-
-.Ws-LiFooter {
-  cursor: pointer;
-  font-weight: 500;
-  transition: color 0.3s;
-  color: #f5f5f5;
-}
-
-.Ws-LiFooter:hover {
-  color: #3b82f6;
-}
 
 /* ----- Responsive ----- */
 @media (max-width: 768px) {
@@ -1198,15 +1193,7 @@ select option {
     flex-direction: column;
     gap: 10px;
   }
-
-  .Ws-UlFooter {
-    flex-direction: column;
-    gap: 15px;
-    align-items: center;
-  }
 }
-
-/* test hugo button postuller */
 
 /* Actions container */
 .ActionsJob {
