--- a/frontend/src/styles/style_footer.css
+++ b/frontend/src/styles/style_footer.css
@@ -1,6 +1,7 @@
 /* ----- Footer principal ----- */
 .Ws-footer {
   position: relative;
+  bottom: 0;
   display: flex;
   background-color: rgba(13, 13, 13, 0.9);
   color: #f5f5f5;
@@ -9,6 +10,8 @@
   justify-content: center;
   align-items: center;
   border-top: 1px solid #a1a1aa;
+  width: 100%;
+  margin-top: auto;
 }
 
 /* ----- Liste du footer ----- */
