--- a/frontend/src/styles/style_vueEmployeur.css
+++ b/frontend/src/styles/style_vueEmployeur.css
@@ -34,15 +34,6 @@
 }
 
 /* Bouton voir/masquer candidatures */
-.vue-toggle-btn {
-  padding: 6px 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 10px;
-}
 
 .vue-toggle-btn:hover {
   background-color: #0056b3;
@@ -224,16 +215,27 @@
   cursor: pointer;
 }
 
+.vue-toggle-btn {
+  background-color: #007bff;
+}
 
-.vue-delete-btn {
+.vue-toggle-btn,
+.vue-delete-btn,
+.vue-edit-btn {
   padding: 8px 12px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   font-weight: bold;
   transition: background-color 0.2s ease-in-out;
+  margin-right: 10px;
+  color: #fff;
 }
 
 .vue-delete-btn:hover {
   background-color: red;
+}
+
+.vue-edit-btn:hover {
+  background-color: darkorange;
 }
