--- a/frontend/src/styles/style_admin.css
+++ b/frontend/src/styles/style_admin.css
@@ -496,13 +496,13 @@ textarea {
 
 /* ----------------------------------------------------------------- */
 
-.NotificationOverlay {
+.NotificationOverlay2 {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(15, 15, 15, 0.8);
+  background: linear-gradient(50deg, #1a2b4c, #ffffff, #5cafe3)! important;
   backdrop-filter: blur(4px);
   display: flex;
   align-items: center;
